refactor: add new logic cssMemeSlider-task LANG=en_EN date +'(%a, %b %d, %Y %r)'

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -10,52 +10,46 @@
 
 <body>
 
-    <!-- <div class="container">
+    <div class="all">
+        <input checked type="radio" name="respond" id="desktop">
+        <article id="slider">
+            <input checked type="radio" name="slider" id="switch1">
+            <input type="radio" name="slider" id="switch2">
+            <input type="radio" name="slider" id="switch3">
+            <input type="radio" name="slider" id="switch4">
+            <input type="radio" name="slider" id="switch5">
+            <div id="slides">
+                <div id="overflow">
+                    <div class="image">
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/55.jpg" alt="ups.."></article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/22.jpg" alt="ups.."></article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/33.jpg" alt="ups.."></article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/44.jpg" alt="ups.."></article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/11.jpg" alt="ups.."></article>
+                    </div>
+                </div>
+            </div>
+            <div id="controls">
+                <label for="switch1"></label>
+                <label for="switch2"></label>
+                <label for="switch3"></label>
+                <label for="switch4"></label>
+                <label for="switch5"></label>
+            </div>
+            <div id="active">
+                <label for="switch1"></label>
+                <label for="switch2"></label>
+                <label for="switch3"></label>
+                <label for="switch4"></label>
+                <label for="switch5"></label>
+            </div>
+        </article>
+    </div>
 
-        <div class="slider">
-        <div class="slides">
-            <input type="radio" name="r" id="r1" checked>
-            <input type="radio" name="r" id="r2">
-            <input type="radio" name="r" id="r3">
-            <input type="radio" name="r" id="r4">
 
-            <div class="slide s1">
-                <img src="https://ia.wampi.ru/2020/11/13/004.jpg" alt="Изображение" class="img">
-            </div>
-            <div class="slide">
-                <img src="https://ia.wampi.ru/2020/11/13/003.jpg" alt="Изображение" class="img2">
-            </div>
-            <div class="slide">
-                <img src="https://ia.wampi.ru/2020/11/13/002.jpg" alt="Изображение" class="img">
-            </div>
-            <div class="slide">
-                <img src="https://ia.wampi.ru/2020/11/13/001.jpg" alt="Изображение" class="img">
-            </div> 
-        </div>
-         </div> 
 
-        <div class="navigation">
-            <label for="r1" class="bar"></label>
-            <label for="r2" class="bar"></label>
-            <label for="r3" class="bar"></label>
-            <label for="r4" class="bar"></label>
-        </div>
-    </div> -->
 
-    <section class="container">
-        <div class="slider-wrapper">
-            <div class="slider">
-                <img id="slide-1" src="/cssMemeSlider/cssMemeSlider/img/mem1.jpeg" alt="img1">
-                <img id="slide-2" src="/cssMemeSlider/cssMemeSlider/img/mem2.png" alt="img2">
-                <img id="slide-3" src="/cssMemeSlider/cssMemeSlider/img/mem1.jpeg" alt="img1">
-            </div>
-            <div class="slider-nav">
-                <a href="#slide-1"></a>
-                <a href="#slide-1"></a>
-                <a href="#slide-1"></a>
-            </div>
-        </div>
-    </section>
+
 
 
 </body>
