feat: add text for img

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -21,11 +21,31 @@
             <div id="slides">
                 <div id="overflow">
                     <div class="image">
-                        <article><img src="/cssMemeSlider/cssMemeSlider/img/55.jpg" alt="ups.."></article>
-                        <article><img src="/cssMemeSlider/cssMemeSlider/img/22.jpg" alt="ups.."></article>
-                        <article><img src="/cssMemeSlider/cssMemeSlider/img/33.jpg" alt="ups.."></article>
-                        <article><img src="/cssMemeSlider/cssMemeSlider/img/44.jpg" alt="ups.."></article>
-                        <article><img src="/cssMemeSlider/cssMemeSlider/img/11.jpg" alt="ups.."></article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/55.jpg" alt="ups..">
+                            <article>
+                                <h2>Здрямканье</h2>
+                            </article>
+                        </article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/22.jpg" alt="ups..">
+                            <article>
+                                <h2>Самоопределение</h2>
+                            </article>
+                        </article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/33.jpg" alt="ups..">
+                            <article>
+                                <h2>Работа мозгом</h2>
+                            </article>
+                        </article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/44.jpg" alt="ups..">
+                            <article>
+                                <h2>Настроение</h2>
+                            </article>
+                        </article>
+                        <article><img src="/cssMemeSlider/cssMemeSlider/img/11.jpg" alt="ups..">
+                            <article>
+                                <h2>Вааще не быдло</h2>
+                            </article>
+                        </article>
                     </div>
                 </div>
             </div>
@@ -36,12 +56,18 @@
                 <label for="switch4"></label>
                 <label for="switch5"></label>
             </div>
-            <div id="active">
-                <label for="switch1"></label>
-                <label for="switch2"></label>
-                <label for="switch3"></label>
-                <label for="switch4"></label>
-                <label for="switch5"></label>
+
+
+            <!--  -->
+            <div class="navigation">
+                <div id="active">
+                    <label for="switch1"></label>
+                    <label for="switch2"></label>
+                    <label for="switch3"></label>
+                    <label for="switch4"></label>
+                    <label for="switch5"></label>
+                </div>
+
             </div>
         </article>
     </div>
