--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -59,16 +59,16 @@
 
 
             <!--  -->
-            <div class="navigation">
-                <div id="active">
-                    <label for="switch1"></label>
-                    <label for="switch2"></label>
-                    <label for="switch3"></label>
-                    <label for="switch4"></label>
-                    <label for="switch5"></label>
-                </div>
-
+            <!-- <div class="navigation"> -->
+            <div id="active">
+                <label for="switch1"></label>
+                <label for="switch2"></label>
+                <label for="switch3"></label>
+                <label for="switch4"></label>
+                <label for="switch5"></label>
             </div>
+
+            <!-- </div> -->
         </article>
     </div>
 
