feat: add other margin for navigation

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -33,7 +33,7 @@
                         </article>
                         <article><img src="/cssMemeSlider/cssMemeSlider/img/33.jpg" alt="ups..">
                             <article>
-                                <h2>Работа мозгом</h2>
+                                <h2>Работа&nbsp;мозгом</h2>
                             </article>
                         </article>
                         <article><img src="/cssMemeSlider/cssMemeSlider/img/44.jpg" alt="ups..">
@@ -43,7 +43,7 @@
                         </article>
                         <article><img src="/cssMemeSlider/cssMemeSlider/img/11.jpg" alt="ups..">
                             <article>
-                                <h2>Вааще не быдло</h2>
+                                <h2>Вааще&nbsp;не&nbsp;быдло</h2>
                             </article>
                         </article>
                     </div>
@@ -59,7 +59,7 @@
 
 
             <!--  -->
-            <!-- <div class="navigation"> -->
+
             <div id="active">
                 <label for="switch1"></label>
                 <label for="switch2"></label>
@@ -68,7 +68,7 @@
                 <label for="switch5"></label>
             </div>
 
-            <!-- </div> -->
+
         </article>
     </div>
 
